Resolved the select dropdown issue, Separate scss variables and update information for the custom scrollbar npm package.

--- a/components/data-table/scss/pmd-datatable.css
+++ b/components/data-table/scss/pmd-datatable.css
@@ -335,10 +335,10 @@ div.dataTables_wrapper div.dataTables_length label {
   background: transparent;
 }
 .pmd-card-inverse .custom-select::after {
-  color: #fff;
+  color: #ffffff;
 }
 .pmd-card-inverse div.dataTables_length select {
-  color: #fff;
+  color: #ffffff;
 }
 .pmd-card-inverse div.dataTables_length select option {
   color: rgba(0, 0, 0, 0.84);
